Created mobile version and started to work on desktop version dashboard

--- a/index.html
+++ b/index.html
@@ -19,72 +19,90 @@
       <div class="person-information-card">
         <div class="person-information">
           <img src="./images/image-jeremy.png" alt="Jeremy Robson Photo" class="person-information__img">
-          <p class="person-information__text">Report for</p>
-          <p class="person-information__full-name">Jeremy Robson</p>
+          <div class="person-information__data">
+            <p class="person-information__text">Report for</p>
+            <p class="person-information__full-name">Jeremy Robson</p>
+          </div>
         </div>
         <div class="person-information-time">
-          <p class="person-information-time__text">Daily</p>
-          <p class="person-information-time__text">Weekly</p>
-          <p class="person-information-time__text">Monthly</p>
+          <button class="person-information-time__btn">Daily</button>
+          <button class="person-information-time__btn">Weekly</button>
+          <button class="person-information-time__btn">Monthly</button>
         </div>
       </div>
 
-      <div class="activities-information-card activities-information-card--orange">
-        <img src="./images/icon-work.svg" alt="Neseser Photo" class="activities-information-card__img">
+      <div class="activities-information-card activities-information-card--orange
+        activities-information-card--background">
         <div class="activity-information">
           <h3 class="tertiary-heading">Work</h3>
-          <img src="./images/icon-ellipsis.svg" alt="Purple dots" class="activity-information__img">
+          <button class="activity-information__btn">
+            <img src="./images/icon-ellipsis.svg" alt="Purple dots" class="activity-information__img">
+          </button>
           <p class="activity-information__hours-text">32hrs</p>
           <p class="activity-information__last-week-text">Last Week - 5hrs</p>
         </div>
       </div>
 
 
-      <div class="activities-information-card activities-information-card--blue">
-        <img src="./images/icon-play.svg" alt="Pad Photo" class="activities-information-card__img">
+      <div class="activities-information-card activities-information-card--blue
+        activities-information-card--background">
         <div class="activity-information">
-          <h3 class="tertiary-heading">Play</h3>
-          <img src="./images/icon-ellipsis.svg" alt="Purple dots" class="activity-information__img">
+          <h3 class="tertiary-heading">Work</h3>
+          <button class="activity-information__btn">
+            <img src="./images/icon-ellipsis.svg" alt="Purple dots" class="activity-information__img">
+          </button>
           <p class="activity-information__hours-text">32hrs</p>
           <p class="activity-information__last-week-text">Last Week - 5hrs</p>
         </div>
       </div>
 
-      <div class="activities-information-card activities-information-card--red">
-        <img src="./images/icon-study.svg" alt="Neseser Photo" class="activities-information-card__img">
+
+      <div class="activities-information-card activities-information-card--red
+        activities-information-card--background">
         <div class="activity-information">
-          <h3 class="tertiary-heading">Study</h3>
-          <img src="./images/icon-ellipsis.svg" alt="Purple dots" class="activity-information__img">
+          <h3 class="tertiary-heading">Work</h3>
+          <button class="activity-information__btn">
+            <img src="./images/icon-ellipsis.svg" alt="Purple dots" class="activity-information__img">
+          </button>
           <p class="activity-information__hours-text">32hrs</p>
           <p class="activity-information__last-week-text">Last Week - 5hrs</p>
         </div>
       </div>
 
-      <div class="activities-information-card activities-information-card--green">
-        <img src="./images/icon-exercise.svg" alt="Neseser Photo" class="activities-information-card__img">
+
+      <div class="activities-information-card activities-information-card--green
+        activities-information-card--background">
         <div class="activity-information">
-          <h3 class="tertiary-heading">Exercise</h3>
-          <img src="./images/icon-ellipsis.svg" alt="Purple dots" class="activity-information__img">
+          <h3 class="tertiary-heading">Work</h3>
+          <button class="activity-information__btn">
+            <img src="./images/icon-ellipsis.svg" alt="Purple dots" class="activity-information__img">
+          </button>
           <p class="activity-information__hours-text">32hrs</p>
           <p class="activity-information__last-week-text">Last Week - 5hrs</p>
         </div>
       </div>
 
-      <div class="activities-information-card activities-information-card--purple">
-        <img src="./images/icon-social.svg" alt="Neseser Photo" class="activities-information-card__img">
+
+      <div class="activities-information-card activities-information-card--purple
+        activities-information-card--background">
         <div class="activity-information">
-          <h3 class="tertiary-heading">Social</h3>
-          <img src="./images/icon-ellipsis.svg" alt="Purple dots" class="activity-information__img">
+          <h3 class="tertiary-heading">Work</h3>
+          <button class="activity-information__btn">
+            <img src="./images/icon-ellipsis.svg" alt="Purple dots" class="activity-information__img">
+          </button>
           <p class="activity-information__hours-text">32hrs</p>
           <p class="activity-information__last-week-text">Last Week - 5hrs</p>
         </div>
       </div>
 
-      <div class="activities-information-card activities-information-card--yellow">
-        <img src="./images/icon-self-care.svg" alt="Neseser Photo" class="activities-information-card__img">
+
+      <div class="activities-information-card activities-information-card--yellow
+        activities-information-card--background">
         <div class="activity-information">
-          <h3 class="tertiary-heading">Self Care</h3>
-          <img src="./images/icon-ellipsis.svg" alt="Purple dots" class="activity-information__img">
+          <h3 class="tertiary-heading">Work</h3>
+          <button class="activity-information__btn">
+            <img src="./images/icon-ellipsis.svg" alt="Purple dots" class="activity-information__img">
+          </button>
           <p class="activity-information__hours-text">32hrs</p>
           <p class="activity-information__last-week-text">Last Week - 5hrs</p>
         </div>
